# hello_solana

./: README.md
anchor_favorites/: Anchor.toml  rust-toolchain.toml  tsconfig.json
anchor_favorites/programs/anchor_curd/: Cargo.toml
anchor_favorites/programs/anchor_curd/src/: lib.rs
anchor_favorites/programs/anchor_favorites/src/: lib.rs
anchor_favorites/programs/anchor_start/: Cargo.toml
anchor_favorites/programs/anchor_start/src/: lib.rs
anchor_favorites/programs/bank/src/: lib.rs
anchor_favorites/programs/emit_log/src/: lib.rs
anchor_favorites/programs/tokenbank/src/: lib.rs
anchor_favorites/tests/: anchor_curd.ts  anchor_start.ts  bank.ts  emit_log.ts
anchor_start/: Anchor.toml
anchor_start/programs/anchor_curd/: Cargo.toml
anchor_start/programs/anchor_curd/src/: lib.rs
anchor_start/programs/anchor_start/: Cargo.toml
anchor_start/programs/anchor_start/src/: lib.rs
backend/: package.json  pnpm-lock.yaml
backend/src/: config.ts  get_all_favorites_pdas.ts  index.ts  listen_favorites.ts  measure_cu.ts  scan_bank.ts
backend/src/idl/: bank.json  emit_log.json  favorites.json  tokenbank.json
backend/src/types/: bank.ts  emit_log.ts  favorites.ts  tokenbank.ts
rust_start/: Cargo.toml
rust_start/examples/: example01.rs  example02.rs
rust_start/src/: lib.rs
rust_start/tests/: test01.rs  test02.rs
solana_start/: 01_read_from_network.ts  02_write_to_network.ts  03_create_token.ts  package-lock.json  package.json  tsconfig.json
solana_start/lib/: utils.ts
